make test CONF="macosx" TEST="gc/serial/HeapChangeLogging.java"